<resources>
    <string name="app_name">Allomalar</string>
    <string name="farobiy">Farobiy (taxallusi; toʻliq nomi Abu Nasr Muhammad ibn Muhammad ibn Uzlugʻ Tarxon Forobiy) (873, Farob shahri — 950, Damashq) — Oʻrta Osiyoning mutafakkiri va qomusiy olimi. Yunon falsafasini chuqur bilgani, unga sharhlar bitganligi va jahonga targʻib qilgani hamda zamonasining ilmlarini puxta oʻzlashtirib, fanlar rivojiga ulkan hissa qoʻshgani uchun „al Muallim assoniy“ („Ikkinchi muallim“, Aristoteldan keyin), „Sharq Arastusi“ nomlariga sazovor boʻldi. Farobiy Sirdaryo sohilidagi Farob (Oʻtror) degan joyda turkiy qabilaga mansub harbiy xizmatchi oilasida tavallud topadi. Oʻsha davrda Movarounnahrda somoniylar sulolasi hukmronlik qilayotgan edi. Boʻlajak faylasuf boshlangʻich bilimini Oʻtrorda olgandan soʻng, oʻqishini Toshkent, Samarqand va Buxoroda davom ettirdi. Farobiy ilmini yanada chuqurlashtirish maqsadida Bagʻdodga yoʻl oladi. Olim yoʻl-yoʻlakay Eronning yirik shaharlari Ray, Hamadon, Isfahon va boshqa joylarda boʻladi. Bagʻdodda Yaqin va Oʻrta Sharq mamlakatlaridan kelgan talaba va olimlar toʻplangan edi. Bu yerda koʻzga koʻringan olim-u fuzalolar bilan tanishdi, yunon falsafiy maktabi, turli fan sohalari namoyandalari bilan uchrashib, ulardan ilm sirlarini oʻrgandi. Masalan, Abu Bashar Matta ibn Yunusdan (870—940) yunon tili va falsafasini, Yuhanna ibn Hiylondan (860—920) esa tibbiyot va mantiq ilmini oʻrgandi. Baʼzi tarixiy manbalarda keltirilishicha, Farobiy 70 dan ortiq tilni bilgan.</string>
    <string name="xorazmiy">Xorazmiy, Abu Jaʼfar (Abu Abdulloh) Muhammad ibn Muso al Xorazmiy (783, Xiva — 850, Bagʻdod) — xorazmlik matematik, astronom, geograf, fan tarixidagi ilk qomusiy olimlardan. Zahiriddin va Firdavs qoʻlida tahsil olgan bilan birga ishlagan.  Dastlabki maʼlumotni Xiva shahrida olgan va yetuk olim boʻlib shakllangan. Bunda arab istilosidan soʻng muayyan darajada saqlanib qolgan qadimgi Xorazm fani anʼanalari asosiy rol oʻynagan. Xalifa Horun ar Rashidning oʻgʻli va uning Xurosondagi voliysi al Maʼmun huzuriga — Marvga taklif etilgan. 819-yilda Bagʻdodni egallagan al Maʼmun Markaziy Osiyolik olimlardan Xorazmiy, Ahmad al Fargʻoniy, Habash al Hosib Marvaziy, Abul Abbos Javhariy va boshqalarni oʻzi bilan olib ketib, oʻziga xos ilmiy jamoa tashkil etgan. Bu jamoa fan tarixidagi dastlabki rosmana akademiya deb qaraladigan ilmiy muassasa — \"Bayt ul Hikmat\" („Donishmandlik uyi“)ning asosini tashkil etgan. Bu akademiyada Xorazmiy yetakchi olim va ilmiy rahbar boʻlgan. U shu davrdan boshlab Bagʻdodda al Maʼmun (813-833), soʻng al Moʻʼtasim (833-842), al Vosiq (842-847) xalifaligi davrlarida yashab ijod etgan.</string>
    <string name="navoiy">Alisher Navoiy (9-fevral 1441-yil — 3-yanvar 1501-yil) — ulugʻ oʻzbek va boshqa turkiy xalqlarning shoiri, mutafakkiri va davlat arbobi boʻlgan.[1][2][3] Gʻarbda chigʻatoy adabiyotining buyuk vakili deb qaraladi, sharqda „nizomi millati va din“ (din va millatning nizomi) unvoni bilan ulugʻlanadi.  Ali Yazdiy nazariga tushgan, Mavlono Lutfiy yosh shoir isteʼdodiga yuqori baho bergan, Kamol Turbatiy eʼtirofini qozongan. Sayyid Hasan Ardasher, Pahlavon Muhammad kabi ustozlardan taʼlim olgan, Abdurahmon Jomiy bilan ijodiy hamkorlikda boʻlgan. Navoiy 1469-yilgacha temuriylar orasidagi ichki nizolar sababli Hirotdan yiroqroqda yashagan.  Husayn Boyqaro Xuroson taxtiga oʻtirgach (1469), Navoiy hayoti va ijodida yangi bosqich boshlanadi, muhrdorlik (1469) mansabiga, vazirlik (1472) va Astrobod hokimligi (1487)ga tayinlanadi. 1480-1500-yillar mobaynida oʻz mablagʻlari hisobidan bir necha madrasa, 40 rabot (safardagi yoʻlovchilar toʻxtab oʻtish joyi), 17 masjid, 10 xonaqoh, 9 hammom, 9 koʻprik, 20 ta hovuz qurdiradi. Husayn Boyqaro Alisher Navoiyga „muqarrabi hazrati sultoniy“ („sulton hazratlarining eng yaqin kishisi“) degan unvonni beradi. Unga koʻra Navoiy davlatning barcha ishlariga aralasha olardi.  Alisher Navoiy tarjimai holi oʻz davrida Xondamir, Vosifiy, Husayn Boyqaro, Bobur kabi tarixchi va davlat arboblarining asarlarida aks etgan.</string>
    <string name="Al_xorazmiy">Xorazmiy, Abu Jaʼfar (Abu Abdulloh) Muhammad ibn Muso al Xorazmiy (783, Xiva — 850, Bagʻdod) — xorazmlik matematik, astronom, geograf, fan tarixidagi ilk qomusiy olimlardan. Zahiriddin va Firdavs qoʻlida tahsil olgan bilan birga ishlagan.  Dastlabki maʼlumotni Xiva shahrida olgan va yetuk olim boʻlib shakllangan. Bunda arab istilosidan soʻng muayyan darajada saqlanib qolgan qadimgi Xorazm fani anʼanalari asosiy rol oʻynagan. Xalifa Horun ar Rashidning oʻgʻli va uning Xurosondagi voliysi al Maʼmun huzuriga — Marvga taklif etilgan. 819-yilda Bagʻdodni egallagan al Maʼmun Markaziy Osiyolik olimlardan Xorazmiy, Ahmad al Fargʻoniy, Habash al Hosib Marvaziy, Abul Abbos Javhariy va boshqalarni oʻzi bilan olib ketib, oʻziga xos ilmiy jamoa tashkil etgan. Bu jamoa fan tarixidagi dastlabki rosmana akademiya deb qaraladigan ilmiy muassasa — \"Bayt ul Hikmat\" („Donishmandlik uyi“)ning asosini tashkil etgan. Bu akademiyada Xorazmiy yetakchi olim va ilmiy rahbar boʻlgan. U shu davrdan boshlab Bagʻdodda al Maʼmun (813-833), soʻng al Moʻʼtasim (833-842), al Vosiq (842-847) xalifaligi davrlarida yashab ijod etgan.</string>
    <string name="todo">TODO</string>
    <string name="al_xorazmiy">Al Xorazmiy</string>
    <string name="al_farobiy">Al Farobiy</string>
    <string name="alisher_navoiy">Alisher Navoiy</string>
    <string name="Todo">TODO</string>
    <string name="todo3">TODO</string>
    <string name="ibn_sino">Ibn sino</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="zahiriddin_muhammad_bobur">Zahiriddin Muhammad Bobur</string>
</resources>